# sound-metric-app

./: .gitignore  BUILD_PLAN.md  MATH.md  README.md  pyproject.toml  sma_config.json  sound_metrics.db.bak-20260716-153529
.claude/skills/add-mr-suggestion/: SKILL.md
src/sound_metric_app/: __init__.py  cli.py  config.py  models.py  workflow_cli.py
src/sound_metric_app/dsp/: __init__.py  graphing.py  metrics.py  processor.py  weighting.py
src/sound_metric_app/ingestion/: __init__.py  dewesoft_reader.py
src/sound_metric_app/services/: __init__.py  aggregation_service.py  clustering_service.py  inclusion_service.py  ingestion_service.py  marking_service.py
src/sound_metric_app/storage/: __init__.py  _base.py  database.py  repository.py
src/sound_metric_app/ui/: __init__.py  controller.py  launcher.py  main_window.py
tests/: test_cli.py  test_controller.py  test_graphing.py  test_ingestion.py  test_launcher.py  test_metrics.py  test_models.py  test_services.py  test_storage.py  test_ui.py
