[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sound-metric-app"
version = "0.1.0"
description = "Acoustic impulse-noise metrics from DewesoftX data (Peak dB, Peak dBA, Peak Impulse, LIAeq100ms)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dwdatareader>=1.2.0",
    "numpy>=1.26",
    "scipy>=1.11",
    "pandas>=2.0",
]

[project.optional-dependencies]
gui = ["PySide6>=6.6", "pyqtgraph>=0.13"]
dev = ["pytest>=8.0", "ruff>=0.5"]

[project.scripts]
sma-analyze = "sound_metric_app.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sound_metric_app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
